--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "private": true,
   "dependencies": {
-    "bootstrap": ">=3.4.1",
+    "bootstrap": "3.4.1",
     "chartist": "0.10.1",
     "cytoscape": "^3.14.1",
     "cytoscape-cose-bilkent": "^4.1.0",
